# pyqt-screenshot

./: README.md  pyproject.toml
src/: main_gui.py  rubber_band.py  screenshot.py  thread_worker.py
