[tool.poetry]
name = "src"
version = "0.1.0"
description = "Create a GIF file of the screenshot."
authors = ["mochisue <motoki32925@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyQt6 = "^6.1.1"
progress = "^1.6"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."console_scripts"]
pyqt_screehshot = "src.main_gui:main"
